Fix download link badge wrapping for long titles
Items with download links that are URLs or filenames didn't wrap
very well insdie the download card. The float-based solution
worked, but not on Firefox. This fixes it for all browsers.

--- a/app/assets/stylesheets/geoblacklight/record.css
+++ b/app/assets/stylesheets/geoblacklight/record.css
@@ -70,19 +70,12 @@
 
 /* Downloads */
 .download a {
-  display: block;
+  .badge {
+    display: inline;
+    margin-inline-end: 0.5em;
+  }
 
   .title {
-    margin: 0;
-    display: inline;
-  }
-
-  .badge {
-    float: inline-end;
-    margin-top: 0.1em;
-  }
-
-  .badge + .title {
-    word-break: break-all;
+    overflow-wrap: break-word;
   }
 }
